--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 <body>
 <div id="usercard"> <!--Карточка профиля пользователя, который обращается к веб-приложению-->
 </div>
-<p>Здесь текст о компании ChatLabs</p> <!--Используем для проверки-->
-<a class="link" href="https://telegram/chatlabs.ru/">Ссылка на ChatLabs</a> <!--Используем для проверки, что вебприложение Телеграмма работает-->
-<p class="hint">Текст подсказки от ChatLabs</p> <!--Проверка-->
+<p>Здесь какой-то текст</p> <!--Используем для проверки-->
+<a class="link" href="https://github.com/VadimLyutsko">Ссылка на Git</a> <!--Используем для проверки, что вебприложение Телеграмма работает-->
+<p class="hint">Текст подсказки от ...</p> <!--Проверка-->
 <button id="button" class="button">Показать или скрыть основную кнопку </button> 
 <button id="btnEdit" class="button">Активировать кнопку / сделать неактивной</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
 </body>
