--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
          myTestBot.MainButton.disable() //Скрываем кнопку 
       }
       else{ //В противном случае
-         myTestBot.MainButton.setParams({"color": "#0000ff"}); //Заменяем цвет на синий
+         myTestBot.MainButton.setParams({"color": "#1fdb70"}); //Заменяем цвет на синий
          myTestBot.MainButton.enable() //Отображаем в веб-боте TelegramWebApp
       }
    });
