--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 <body>
 <div id="usercard"> <!--Карточка профиля пользователя, который обращается к веб-приложению-->
 </div>
-<p>Здесь какой-то текст</p> <!--Используем для проверки-->
-<a class="link" href="https://ozh.github.io/cookieclicker/">Ссылка на Сookieclicker</a> <!--Используем для проверки, что вебприложение Телеграмма работает-->
+<p>&#128071;&#128071;&#128071; Ткни!&#128071;&#128071;&#128071;</p> <!--Используем для проверки-->
+<a class="link" href="https://ozh.github.io/cookieclicker/">&#128073;Ссылка на Сookieclicker&#128072;</a> <!--Используем для проверки, что вебприложение Телеграмма работает-->
 <p class="hint">Текст подсказки от Vadimgreens</p> <!--Проверка-->
 <button id="button" class="button">Показать или скрыть основную кнопку </button> 
 <button id="btnEdit" class="button">Активировать кнопку / сделать неактивной</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
