--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <script>
   let telegramAppChatLabs = window.Telegram.WebApp; //нужно получить объект window.Telegram.WebApp Телеграмма
    telegramAppChatLabs.expand(); //разворачиваем на все окно
-   telegramAppChatLabs.MainButton.text = "Кнопка ChatLabst"; //Задаем текст кнопки 
-   telegramAppChatLabs.MainButton.setText("ChatLabs на кнопке"); //Меняем текст на кнопке веббота в Телеграмме
+   telegramAppChatLabs.MainButton.text = "Текст кнопки"; //Задаем текст кнопки 
+   telegramAppChatLabs.MainButton.setText("Текст на кнопке"); //Меняем текст на кнопке веббота в Телеграмме
    telegramAppChatLabs.MainButton.textColor = "#ff0000"; //Указываем цвет текста, а в данном случае выбран 100% красный
    telegramAppChatLabs.MainButton.color = "#ffffff"; //Делаем бэкграунд кнопки 100% белым
    telegramAppChatLabs.MainButton.setParams({"color": "#000000"}); // Изменяем все параметры
