--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Telegram WebApps API от ChatLabs</title>
+		<title>Telegram WebApps API от Vadimgreens</title>
 		<script src="https://telegram.org/js/telegram-web-app.js"></script> 
  </head>
  <style>
@@ -48,8 +48,8 @@
       <p>&#128071;&#128071;&#128071; Ткни! &#128071;&#128071;&#128071;</p> <!--Используем для проверки-->
       <a class="link" href="https://ozh.github.io/cookieclicker/">&#128073;Ссылка на Сookieclicker&#128072;</a> <!--Используем для проверки, что вебприложение Телеграмма работает-->
       <p class="hint">Текст подсказки от Vadimgreens</p> <!--Проверка-->
-      <button id="button" class="button">Показать или скрыть основную кнопку </button> 
-      <button id="btnEdit" class="button">Активировать кнопку / сделать неактивной</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
+      <button id="button" class="button">Потыкай если интересно</button> 
+      <button id="btnEdit" class="button">Активная / неактивная кнопка</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
       </body>
 <script>
   let telegramAppChatLabs = window.Telegram.WebApp; //нужно получить объект window.Telegram.WebApp Телеграмма
