--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		 color: var(--tg-theme-button-text-color);
 		 border: none;
 		 font-size: 20px;
+       border-radius: 5px;
 	}
 
 	.button:not(:last-child){
@@ -48,7 +49,7 @@
       <p>&#128071;&#128071;&#128071; Ткни! &#128071;&#128071;&#128071;</p> <!--Используем для проверки-->
       <a class="link" href="https://ozh.github.io/cookieclicker/">&#128073;Ссылка на Сookieclicker&#128072;</a> <!--Используем для проверки, что вебприложение Телеграмма работает-->
       <p class="hint">Текст подсказки от Vadimgreens</p> <!--Проверка-->
-      <button id="button" class="button">Потыкай если интересно</button> 
+      <button id="button" class="button">Потыкай, если интересно</button> 
       <button id="btnEdit" class="button">Активная / неактивная кнопка</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
       </body>
 <script>
